build: upgrade Netty and Reactor Netty
upgrade Netty to 4.1.118.Final and and Reactor Netty to 1.2.3