@@ -74,7 +74,7 @@
         <url>git@github.com:diennea/carapaceproxy.git</url>
         <connection>scm:git:${project.scm.url}</connection>
         <developerConnection>scm:git:${project.scm.url}</developerConnection>
-        <tag>release/2.1</tag>
+        <tag>release/2.2</tag>
     </scm>
 
     <distributionManagement>
@@ -91,8 +91,8 @@
         <maven.compiler.release>${toolchain.java.version}</maven.compiler.release>
         <javacc-maven-plugin.version>2.4</javacc-maven-plugin.version>
 
-        <libs.projectreactor>2024.0.2</libs.projectreactor>
-        <libs.netty>4.1.117.Final</libs.netty>
+        <libs.projectreactor>2024.0.3</libs.projectreactor>
+        <libs.netty>4.1.118.Final</libs.netty>
         <libs.acme4j>3.4.0</libs.acme4j>
         <libs.bouncycastle>1.78.1</libs.bouncycastle>
         <libs.awssdk>2.17.113</libs.awssdk>
@@ -352,6 +352,7 @@
                             --add-opens java.base/java.lang=ALL-UNNAMED
                             --add-opens java.base/java.util=ALL-UNNAMED
                             --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+                            --add-opens java.logging/java.util.logging=ALL-UNNAMED
                             --add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED
                             --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
                         </argLine>
